--- a/index.html
+++ b/index.html
@@ -10,66 +10,76 @@
 </head>
 
 <body>
-    <div class="container">
-        <table>
-            <tr>
-                <th>PRODUCT NAME</th>
-                <th>UNIT PRICE</th>
-                <th>QUANTITY</th>
-                <th>ACTION</th>
-                <th>PRICE</th>
-            </tr>
-            <tr>
-                <td>WATER</td>
-                <td><input type="number" class="unit"></td>
-                <td>
-                <input type="number" class = "qty" placeholder="Enter the quantity">
-                </td>
-                <td><button class="button">calculate</button></td>
-                <td><p></p></td>
 
-            </tr>
-            <tr>
-                <td>PEN</td>
-                <td><input type="number" class="unit"></td>
-                <td>
-                    <input type="number" class = "qty" placeholder="Enter the quantity">
+    <table>
+        <tr>
+            <th>PRODUCT NAME</th>
+            <th>UNIT</th>
+            <th>Quantity</th>
+            <th>ACTION</th>
+            <th>PRICE</th>
+        </tr>
+        <tr>
+            <td>WATER CAN</td>
+            <td><input type="number" class="unit"></td>
+            <td>
+                <input type="number" class="qty" placeholder="Enter the quantity">
+            </td>
+            <td><button class="button">calculate</button></td>
+            <td>
+                <p></p>
+            </td>
 
-                </td>
-                
-                <td><button class="button">calculate</button></td>
-                <td><p></p></td>
-            </tr>
-            <tr>
-                <td>MOBILE</td>
-                <td><input type="number" class="unit"></td>
-                <td>
-                    <input type="number" class = "qty" placeholder="Enter the quantity">
-                </td>
-                <td><button class="button">calculate</button></td>
-                <td><p></p></td>
-            </tr>
-            <tr>
-                <td>NOTE</td>
-                <td><input type="number" class="unit"></td>
-                <td>
-                    <input type="number" class = "qty" placeholder="Enter the quantity">
-                </td>
-                    <td><button class="button">calculate</button></td>
-                <td><p></p></td>
-            </tr>
-            <tr>
-                <td>MOUSE</td>
-                <td><input type="number" class="unit"></td>
-                <td>
-                    <input type="number" class = "qty" placeholder="Enter the quantity">
-                </td>
-                <td><button class="button">calculate</button></td>
-                <td><p></p></td>
-                
-            </tr>
-        </table>
-    </div>
+        </tr>
+        <tr>
+            <td>PEN</td>
+            <td><input type="number" class="unit"></td>
+            <td>
+                <input type="number" class="qty" placeholder="Enter the quantity">
+
+            </td>
+
+            <td><button class="button">calculate</button></td>
+            <td>
+                <p></p>
+            </td>
+        </tr>
+        <tr>
+            <td>MOBILE</td>
+            <td><input type="number" class="unit"></td>
+            <td>
+                <input type="number" class="qty" placeholder="Enter the quantity">
+            </td>
+            <td><button class="button">calculate</button></td>
+            <td>
+                <p></p>
+            </td>
+        </tr>
+        <tr>
+            <td>NOTE</td>
+            <td><input type="number" class="unit"></td>
+            <td>
+                <input type="number" class="qty" placeholder="Enter the quantity">
+            </td>
+            <td><button class="button">calculate</button></td>
+            <td>
+                <p></p>
+            </td>
+        </tr>
+        <tr>
+            <td>MOUSE</td>
+            <td><input type="number" class="unit"></td>
+            <td>
+                <input type="number" class="qty" placeholder="Enter the quantity">
+            </td>
+            <td><button class="button">calculate</button></td>
+            <td>
+                <p></p>
+            </td>
+
+        </tr>
+    </table>
+
 
 
 
